[package]
name = "exif-stripper-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
img-parts = "0.3"
kamadak-exif = "0.5"
png = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true

[dev-dependencies]
